--- a/www_src/styles/modules/pun-ticker.module.scss
+++ b/www_src/styles/modules/pun-ticker.module.scss
@@ -1,5 +1,5 @@
 /* Pun ticker */
-.pun-ticker {
+#punTickerContainer {
     background: rgba(252, 196, 25, 0.06);
     border: 1px solid rgba(252, 196, 25, 0.12);
     border-radius: 12px;
